[package]
name = "hybrid_cache_server"
version = "0.1.5"
edition = "2021"
build = "build.rs"
authors = ["j-mendez <jeff@spider.cloud>"]
repository = "https://github.com/spider-rs/hybrid-cache-server"
keywords = ["cache", "indexing"]
categories = ["web-programming", "command-line-utilities"]
description = "A hybrid cache server with indexing."
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "http1", "http2", "tokio"] }
http-body-util = "0.1"
bytes = "1"
rocksdb = { version = "0.24", features = ["multi-threaded-cf"] }
meilisearch-sdk = "0.31"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
blake3 = "1"
hex = "0.4"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"
